Fix image aligning bug

--- a/css/layout.css
+++ b/css/layout.css
@@ -177,6 +177,7 @@ nav .menu {
 #portfolios .item > a {
     display: flex;
     align-items: center;
+    justify-content: center;
 
     flex: 1;
 }
